# slg-cplusplus

./: .gitignore  CMakeLists.txt  README.md
config/: logging.sample.json
config/login/: login.json
docker/: docker-compose.citus-cluster.yml  docker-compose.redis-cluster.yml  docker-compose.redis-six.yml  docker-compose.yml
docker/redis-cluster/: init-cluster.sh  node-10000.conf  node-10001.conf  node-10002.conf  node-10003.conf  node-10004.conf  node-10005.conf
docs/architecture/: architecture.md
examples/: CMakeLists.txt
examples/coroutine/: CMakeLists.txt
examples/coroutine/fiber_echo_server/: main.cpp
include/algorithms/snowflake/: snowflake_export.h  snowflake_id.h
include/application/: application.h  application_export.h  dependency_container.h
include/application/protocol/: length_prefixed_reader.h  message_codec.h  packet_header.h  protocol_registry.h  security_context.h  tcp_protocol_router.h
include/compressor/: compression_processor.h
include/coroutine/: actor.h  actor_manager.h  asio_bridge.h  coroutine_export.h  fiber_tcp_session.h  mailbox.h  scheduler.h  timer_bridge.h
include/crypto/: aes_crypto_processor.h  crypto_processor.h
include/database/citus/: citus_config.h  citus_connection.h  citus_export.h  citus_manager.h
include/database/redis/: redis_client.h  redis_config.h  redis_export.h
include/datetime/: datetime.h  datetime_export.h
include/json/: json_export.h  json_reader.h  json_value.h  json_writer.h
include/logging/: logging_config.h  logging_export.h  logging_manager.h
include/navigation/: detour_nav_mesh_runtime.h  nav_mesh_serialization.h  navigation_export.h  recast_nav_mesh_builder.h
include/network/http/: http_client.h  http_export.h  http_server.h
include/network/tcp/: tcp_client.h  tcp_connection.h  tcp_export.h  tcp_io_context.h  tcp_server.h
include/singleton/: singleton.h  singleton_export.h
include/threading/: thread.h  thread_pool.h  threading_export.h
include/timer/: cron_service.h  scheduler.h  simple_timer.h  time_wheel.h  timer_export.h
login/: CMakeLists.txt  build_info.h.in
login/include/: internal_service_handler.h  logging_macros.h  login_service.h  player_login_handler.h
login/include/login/: login_service.h
login/src/: internal_service_handler.cpp  login_service.cpp  main.cpp  player_login_handler.cpp
migrations/: 01_accounts.sql  02_players.sql  03_guilds.sql  04_world.sql  05_communication.sql  06_assets.sql
protos/client/: enums.proto
protos/client/login/: login.proto
protos/common/: common.proto  error_code.proto
src/algorithms/snowflake/: snowflake_id.cpp
src/application/: CMakeLists.txt  application.cpp  message_codec.cpp  protocol_registry.cpp  security_context.cpp  tcp_protocol_router.cpp
src/compressor/: compression_processors.cpp
src/coroutine/: CMakeLists.txt  actor.cpp  fiber_tcp_session.cpp  scheduler.cpp  timer_bridge.cpp
src/crypto/: aes_crypto_processor.cpp
src/database/citus/: CMakeLists.txt  citus_config.cpp  citus_connection.cpp  citus_manager.cpp
src/database/redis/: CMakeLists.txt  redis_client.cpp  redis_config.cpp
src/datetime/: CMakeLists.txt  datetime.cpp
src/json/: CMakeLists.txt  json_reader.cpp  json_value.cpp  json_writer.cpp
src/logging/: CMakeLists.txt  logging_config.cpp  logging_manager.cpp
src/navigation/: CMakeLists.txt  detour_nav_mesh_runtime.cpp  recast_nav_mesh_builder.cpp
src/navigation/recast/: BuildContext.cpp  BuildContext.h  ChunkyTriMesh.cpp  ChunkyTriMesh.h  MeshLoaderObj.cpp  MeshLoaderObj.h  recastnavmesh.cpp  recastnavmesh.h
src/network/: CMakeLists.txt
src/network/http/: http_client.cpp  http_server.cpp
src/network/tcp/: tcp_client.cpp  tcp_connection.cpp  tcp_io_context.cpp  tcp_server.cpp
src/singleton/: CMakeLists.txt  singleton.cpp
src/threading/: CMakeLists.txt  thread.cpp  thread_pool.cpp
src/timer/: CMakeLists.txt  cron_service.cpp  scheduler.cpp  simple_timer.cpp  time_wheel.cpp
tests/: CMakeLists.txt
tests/coroutine/performance/: CMakeLists.txt  fiber_tcp_session_performance_test.cpp  performance_config.h  performance_main.cpp  scheduler_performance_test.cpp
tests/coroutine/unit/: CMakeLists.txt  actor_manager_test.cpp  actor_test.cpp  asio_bridge_test.cpp  connector_fiber_test.cpp  fiber_tcp_session_error_test.cpp  mailbox_test.cpp  scheduler_test.cpp  tcp_listener_fiber_test.cpp  timer_bridge_test.cpp
tests/database/: CMakeLists.txt
tests/database/citus/: CMakeLists.txt  citus_connection_test.cpp
tests/database/redis/: CMakeLists.txt  redis_client_test.cpp  redis_cluster_test.cpp
tests/network/http/: CMakeLists.txt  http_client_test.cpp
tests/network/http/certs/: 1000.pem  expired_server.crt  expired_server.key  notyet_server.key  test_ca.crt  test_ca.key  test_server.crt  test_server.key
tests/network/http/performance/: http_load_test.cpp  performance_config.h  performance_main.cpp
