cmake_minimum_required(VERSION 3.16)
project(slg_core LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(src/singleton)
add_subdirectory(src/threading)
add_subdirectory(src/network)
add_subdirectory(src/application)
add_subdirectory(src/database/citus)
add_subdirectory(src/database/redis)
add_subdirectory(src/json)
add_subdirectory(src/logging)
